# bitcoind-client

./: README.md  bitcoind-client.cabal
app/: Main.hs
src/: Bitcoin.hs  Client.hs
