name:                bitcoind-client
version:             0.0.0.1
synopsis:            bitcoind client
description:         Please see README.md
homepage:            http://github.com/cmahon/bitcoin-d#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Mahon
maintainer:          cnmahon@gmail.com
copyright:           Copyright (c) 2016 Chris Mahon
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bitcoin
                     , Client
  ghc-options:         -Wall -fno-warn-orphans
  build-depends:       aeson
                     , base
                     , base64-bytestring
                     , bytestring
                     , either
                     , mtl
                     , optparse-applicative
                     , servant
                     , servant-client
                     , text
                     , transformers
  default-language:    Haskell2010

executable bitcoind-client
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , bitcoind-client
  default-language:    Haskell2010


test-suite bitcoind-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bitcoind-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmahon/bitcoind-client